--- a/index.html
+++ b/index.html
@@ -1,17 +1,94 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Jeevasurya Palanisamy | Data Science Portfolio</title>
-  </head>
-  <body>
-    <h1>Hello, I'm Jeevasurya Palanisamy 👋</h1>
-    <p>Future Data Scientist | Python | Spark | PostgreSQL</p>
-    <h2>🔍 Projects:</h2>
-    <ul>
-      <li>✅ Titanic EDA</li>
-      <li>✅ COVID-19 Dashboard</li>
-      <li>✅ Credit Score Prediction</li>
-    </ul>
-    <p>📫 <a href="https://www.linkedin.com/in/jeeva-surya" target="_blank">LinkedIn</a></p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jeevasurya Palanisamy | Data Science Portfolio</title>
+  
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  
+  <!-- Animate.css for smooth animations -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
+  <style>
+    body {
+      background: linear-gradient(to right, #f5f7fa, #c3cfe2);
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .intro {
+      padding-top: 80px;
+    }
+    .project-card {
+      transition: transform 0.3s ease;
+    }
+    .project-card:hover {
+      transform: scale(1.05);
+    }
+    footer {
+      background-color: #222;
+      color: #ccc;
+      padding: 20px 0;
+    }
+    a {
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Header Section -->
+  <header class="text-center py-5 bg-primary text-white animate__animated animate__fadeInDown">
+    <h1>Hello, I'm <strong>Jeevasurya Palanisamy</strong> 👋</h1>
+    <p class="lead">Future Data Scientist | Python | Spark | PostgreSQL</p>
+  </header>
+
+  <!-- Projects Section -->
+  <section class="container intro text-center animate__animated animate__fadeInUp">
+    <h2 class="mt-5 mb-4">📊 Featured Projects</h2>
+    <div class="row g-4 justify-content-center">
+      <div class="col-md-4">
+        <div class="card project-card shadow">
+          <div class="card-body">
+            <h5 class="card-title">Titanic EDA</h5>
+            <p class="card-text">An in-depth exploration of survival rates using pandas and seaborn.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card project-card shadow">
+          <div class="card-body">
+            <h5 class="card-title">COVID-19 Dashboard</h5>
+            <p class="card-text">Interactive charts tracking the COVID-19 spread using Plotly.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card project-card shadow">
+          <div class="card-body">
+            <h5 class="card-title">Credit Score Prediction</h5>
+            <p class="card-text">ML model to classify credit scores from financial data.</p>
+            <a href="#" class="btn btn-outline-primary btn-sm">View Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="container text-center my-5 animate__animated animate__fadeInUp">
+    <h3>📫 Connect with Me</h3>
+    <p><a href="https://www.linkedin.com/in/jeeva-suriya" target="_blank" class="btn btn-success mt-2">LinkedIn Profile</a></p>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center">
+    <p>© 2025 Jeevasurya Palanisamy. All rights reserved.</p>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
