--- a/index.html
+++ b/index.html
@@ -158,16 +158,19 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 typewriter">
-                    <h1 class="display-4 fw-bold mb-4">Hi, I'm Jeevasurya</h1>
-                    <h2 class="h2 mb-4">Data Scientist & ML Engineer</h2>
-                    <p class="lead mb-5">Transforming data into actionable insights and building intelligent solutions through advanced analytics and machine learning.</p>
+                    <h1 class="display-4 fw-bold mb-4">Hi, I'm Jeeva Surya</h1>
+                    <h2 class="h2 mb-4">Data Science Enthusiast | Python Developer</h2>
+                    <p class="lead mb-5">Transforming raw data into actionable insights through Python programming and machine learning techniques.</p>
                     <div class="d-flex">
                         <a href="#about-section" class="btn btn-primary px-4 py-2 me-3">Contact Me</a>
                         <a href="#skills-section" class="btn btn-outline-light px-4 py-2">Explore Skills</a>
                     </div>
                 </div>
-                <div class="col-lg-6 text-center d-none d-lg-block">
-                    <img src="/api/placeholder/500/500" alt="Jeevasurya" class="img-fluid rounded-circle shadow" style="max-width: 80%;">
+                <div class="col-lg-6 text-center d-none d-lg-block position-relative">
+                    <div class="profile-image-container position-relative" style="width: 80%; margin: 0 auto;">
+                        <div class="profile-background rounded-circle shadow position-absolute" style="background-color: #f8f9fa; width: 100%; height: 100%; z-index: 1;"></div>
+                        <img src="https://images.unsplash.com/photo-1547872041-06133313e5a0" alt="Jeeva Surya" class="img-fluid rounded-circle shadow position-relative" style="z-index: 2; max-width: 100%; object-fit: cover; object-position: center;">
+                    </div>
                 </div>
             </div>
         </div>
