--- a/index.html
+++ b/index.html
@@ -596,11 +596,10 @@
                 </div>
                 <div class="col-md-6 text-md-end">
                     <div class="mb-2">
-                        <a href="#" class="text-white text-decoration-none me-3"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/jeeva-surya/" class="text-white text-decoration-none me-3"><i class="fab fa-linkedin"></i></a>
                         <a href="#" class="text-white text-decoration-none me-3"><i class="fab fa-github"></i></a>
-                        <a href="#" class="text-white text-decoration-none me-3"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-white text-decoration-none me-3"><i class="fab fa-kaggle"></i></a>
-                        <a href="#" class="text-white text-decoration-none"><i class="fab fa-medium"></i></a>
+                        <a href="https://x.com/Jeevasurya_data" class="text-white text-decoration-none me-3"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.kaggle.com/jsdatapro/" class="text-white text-decoration-none me-3"><i class="fab fa-kaggle"></i></a>
                     </div>
                     <p class="small text-muted mb-0">© 2025 Jeevasurya. All rights reserved.</p>
                 </div>
