--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="col-lg-6 text-center d-none d-lg-block position-relative">
                     <div class="profile-image-container position-relative" style="width: 80%; margin: 0 auto;">
                         <div class="profile-background rounded-circle shadow position-absolute" style="background-color: #f8f9fa; width: 100%; height: 100%; z-index: 1;"></div>
-                        <img src="/api/placeholder/400/400" alt="Jeeva Surya" class="img-fluid rounded-circle shadow position-relative" style="z-index: 2; max-width: 100%; object-fit: cover; object-position: center;">
+                        <img src="https://github.com/Jeevasurya-Datascientist/jeevasurya.github.io/blob/main/Linkedin%20profile%201.png?raw=true" alt="Jeeva Surya" class="img-fluid rounded-circle shadow position-relative" style="z-index: 2; max-width: 100%; object-fit: cover; object-position: center;">
                     </div>
                 </div>
             </div>
@@ -849,12 +849,12 @@
             }
             setTimeout(function() {
                 try {
-                    const resumeContent = "Jeeva Surya Portfolio Resume\n\nThis is a placeholder for the actual resume PDF file.";
+                    const resumeContent = "Jeeva Surya Palanisamy Resume\n\nThis is a placeholder for the actual resume PDF file.";
                     const blob = new Blob([resumeContent], { type: 'text/plain' });
                     const url = URL.createObjectURL(blob);
                     const downloadLink = document.createElement('a');
                     downloadLink.href = url;
-                    downloadLink.download = 'Jeevasurya_Resume.pdf';
+                    downloadLink.download = 'JEEVA SURYA PALANISAMY Resume (1).pdf';
                     document.body.appendChild(downloadLink);
                     downloadLink.click();
                     document.body.removeChild(downloadLink);
@@ -870,7 +870,7 @@
                             const newBlob = new Blob([resumeContent], { type: 'text/plain' });
                             const newUrl = URL.createObjectURL(newBlob);
                             newLink.href = newUrl;
-                            newLink.download = 'Jeevasurya_Resume.pdf';
+                            newLink.download = 'JEEVA SURYA PALANISAMY Resume (1).pdf';
                             document.body.appendChild(newLink);
                             newLink.click();
                             document.body.removeChild(newLink);
