--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
                 issuer: "LinkedIn Learning",
                 url: "https://www.linkedin.com/learning/certificates/b55bb7d07a2b420b90f256f38e13b8ee1ee55b66f85ac0592034c0b8a8ce955d?trk=share_certificate",
                 tags: ["SQL", "PostgreSQL", "Databases"],
-                imageUrl: "https://images.unsplash.com/photo-1607004468138-2f7908535415?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=60"
+                imageUrl: "https://images.unsplash.com/photo-1593720213428-28a5b9e94613?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=60" // New image
             },
             // III. Programming for Data Science: Python
             {
@@ -738,7 +738,7 @@
                 issuer: "LinkedIn Learning",
                 url: "https://www.linkedin.com/learning/certificates/caebde15f5f382c1f3bf8b0a39827cc97e69b9d5dad87c23f25609ba4a9d5ded?trk=share_certificate",
                 tags: ["Python", "Data Science", "Machine Learning"],
-                imageUrl: "https://images.unsplash.com/photo-1580894732444-8ec533959546?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=60"
+                imageUrl: "https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=60" // New, highly reliable Python/coding image
             },
             // IV. Introduction to Machine Learning
             {
@@ -760,8 +760,8 @@
                 title: "Microsoft exam Certificate",
                 issuer: "Microsoft (via LinkedIn Learning)",
                 url: "https://www.linkedin.com/learning/certificates/14f14850a34abbaa372907c447eb199718e2667d6dfb20f2cd91afcb6f093a85?trk=share_certificate",
-                tags: ["Microsoft", "Exam"],
-                imageUrl: "https://images.unsplash.com/photo-1605106702734-205df224ecce?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=60"
+                tags: ["Microsoft", "Exam", "LinkedIn Learning"], // Added LinkedIn Learning tag
+                imageUrl: "https://www.google.com/imgres?q=microsoft%2C%20linkedin%20learning%20logo&imgurl=https%3A%2F%2Fthumbs.dreamstime.com%2Fb%2Fmicrosoft-linkedin-logos-kiev-ukraine-june-printed-white-paper-buys-social-media-73453287.jpg&imgrefurl=https%3A%2F%2Fwww.dreamstime.com%2Feditorial-photography-microsoft-linkedin-logos-kiev-ukraine-june-printed-white-paper-buys-social-media-image73453287&docid=7pRRfHpLo0Vn5M&tbnid=o8dad_kTkIeRJM&vet=12ahUKEwidtL-EmJiNAxWexTgGHWazLUsQM3oECHYQAA..i&w=800&h=462&hcb=2&ved=2ahUKEwidtL-EmJiNAxWexTgGHWazLUsQM3oECHYQAA" // Replace this
             },
             // VI. Exploring AI & Modern Analytical Techniques
             {
@@ -783,7 +783,7 @@
                 issuer: "LinkedIn Learning",
                 url: "https://www.linkedin.com/learning/certificates/e3ba929dfd4052bc64d1b9ee66684addd3f9503e2e7100ee2d422a62b32e2eee",
                 tags: ["ChatGPT", "AI", "Nano Tips"],
-                imageUrl: "https://images.unsplash.com/photo-1678483789004-a6273a60587f?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=60"
+                imageUrl: "https://images.unsplash.com/photo-1611162616805-6<seg_100>18566a2a?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=60" // New image: Abstract, techy, chat-like
             },
             // VII. Essential Soft Skills: Communication
             {
