--- a/index.html
+++ b/index.html
@@ -13,306 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-    <style>
-        :root {
-            --primary: #3b82f6; /* blue-500 */
-            --secondary: #1f2937; /* gray-800 */
-            --accent: #10b981; /* emerald-500 */
-            --light-bg: #f8fafc; /* slate-50 */
-            --dark-text: #1f2937; /* gray-800 */
-            --light-text: #f3f4f6; /* gray-100 */
-            --chart-color-1: #3b82f6;
-            --chart-color-2: #10b981;
-            --chart-color-3: #f59e0b;
-            --chart-color-4: #ef4444;
-            --chart-color-5: #8b5cf6; /* violet-500 */
-            --card-shadow: 0 8px 25px rgba(0, 0, 0, 0.07);
-            --card-hover-shadow: 0 12px 35px rgba(0, 0, 0, 0.1);
-        }
-
-        body {
-            font-family: 'Inter', sans-serif;
-            scroll-behavior: smooth;
-            background-color: #f9fafb; /* Even lighter gray for body */
-            color: var(--dark-text);
-            overflow-x: hidden; /* Prevent horizontal scroll from animations */
-        }
-
-        /* Preloader */
-        #preloader {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #fff;
-            z-index: 9999;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .loader {
-            border: 6px solid #e5e7eb; /* Lighter gray for loader track */
-            border-top: 6px solid var(--primary);
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            animation: spin 1.2s linear infinite;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* Hero Section */
-        .hero-section {
-            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
-            color: var(--light-text);
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            position: relative;
-            overflow: hidden;
-        }
-        .hero-section::before {
-            content: '';
-            position: absolute;
-            top: -50%; left: -50%;
-            width: 200%; height: 200%;
-            background: radial-gradient(circle, rgba(255, 255, 255, 0.08) 0%, transparent 40%);
-            animation: pulseShine 10s infinite linear;
-            z-index: 0;
-        }
-        @keyframes pulseShine {
-            0% { transform: scale(0.8) rotate(0deg); opacity: 0.5; }
-            50% { transform: scale(1) rotate(180deg); opacity: 1; }
-            100% { transform: scale(0.8) rotate(360deg); opacity: 0.5; }
-        }
-        .hero-section .container {
-            position: relative;
-            z-index: 1;
-        }
-        .typewriter h1 {
-            overflow: hidden;
-            border-right: .12em solid var(--accent);
-            white-space: nowrap;
-            margin: 0 auto;
-            letter-spacing: .03em;
-            animation: typing 3.5s steps(35, end) forwards, blink-caret .8s step-end infinite;
-            font-weight: 800;
-        }
-        @keyframes typing { from { width: 0 } to { width: 100% } }
-        @keyframes blink-caret { from, to { border-color: transparent } 50% { border-color: var(--accent); } }
-
-        .hero-section .btn-primary, .hero-section .btn-outline-light {
-            padding: 0.75rem 1.75rem;
-            font-size: 1.05rem;
-            font-weight: 500;
-        }
-
-        /* Navigation */
-        .navbar {
-            transition: background-color 0.3s ease, box-shadow 0.3s ease;
-            background: rgba(255, 255, 255, 0.85) !important;
-            backdrop-filter: blur(8px);
-            -webkit-backdrop-filter: blur(8px);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.03);
-        }
-        .navbar.scrolled {
-            background: rgba(255, 255, 255, 0.98) !important;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.07);
-        }
-        .nav-link {
-            position: relative;
-            color: var(--dark-text) !important;
-            font-weight: 500;
-            transition: color 0.3s ease;
-            padding: 0.5rem 1rem !important;
-        }
-        .nav-link::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: -4px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: var(--primary);
-            transition: width 0.3s ease;
-        }
-        .nav-link:hover, .nav-link.active { color: var(--primary) !important; }
-        .nav-link:hover::after, .nav-link.active::after { width: 60%; }
-
-        /* Section Styles */
-        section { padding-top: 80px; padding-bottom: 80px; }
-        #home { padding-top: 0; padding-bottom: 0; }
-        #skills-section, #about-section, #projects-section { background: white; } /* Added #projects-section */
-        #certificates-section, #resume-section, #data-visualization-section { background: var(--light-bg); }
-        .section-title h2 { font-weight: 700; color: var(--dark-text); margin-bottom: 0.75rem; }
-        .section-title p { color: #4b5563; /* gray-600 */ max-width: 600px; margin-left:auto; margin-right:auto;}
-
-        /* Animations */
-        .fade-in { opacity: 0; transform: translateY(30px); transition: opacity 0.6s ease-out, transform 0.6s ease-out; }
-        .fade-in.visible { opacity: 1; transform: translateY(0); }
-        .slide-in-right.visible { /* Add if you have specific slide-in styles not covered by general fade-in */ }
-
-
-        /* Card Styles */
-        .skill-card, .certificate-card, .stats-card, .chart-container, 
-        #resume-section .card, #about-section .card, .project-card { /* Added .project-card */
-            border: 1px solid #e5e7eb; /* gray-200 */
-            border-radius: 12px;
-            background-color: white;
-            box-shadow: var(--card-shadow);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            display: flex; /* For consistent height in h-100 */
-            flex-direction: column; /* For consistent height in h-100 */
-        }
-        .skill-card:hover, .certificate-card:hover, .stats-card:hover, 
-        .chart-container:hover, #resume-section .card:hover, #about-section .card:hover, .project-card:hover { /* Added .project-card:hover */
-            transform: translateY(-6px);
-            box-shadow: var(--card-hover-shadow);
-        }
-        .certificate-card img, .project-card img { /* Added .project-card img */
-            object-fit: cover; 
-            height: 180px; /* Adjusted for better card balance */
-            border-top-left-radius: 11px; 
-            border-top-right-radius: 11px; 
-            transition: transform 0.3s ease-in-out;
-        }
-        .certificate-card:hover img, .project-card:hover img { /* Added .project-card:hover img */
-            transform: scale(1.03); 
-        }
-        .certificate-card .card-body, .project-card .card-body { /* Added .project-card .card-body */
-            flex-grow: 1; /* Allows card body to expand and push footer down */
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        .certificate-tags { margin-bottom: 0.75rem; }
-
-        .skill-icon-container {
-            width: 60px; height: 60px;
-            border-radius: 50%;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 1rem;
-            font-size: 1.75rem;
-        }
-        .stats-icon { /* Specific for stats cards if different from skill-icon */
-            width: 50px; height: 50px;
-            border-radius: 50%;
-            display: flex; /* Use flex for centering icon */
-            align-items: center;
-            justify-content: center;
-            font-size: 1.5rem; /* Adjust icon size */
-        }
-        .skill-card .card-title, .certificate-card .card-title, .project-card .card-title { font-weight: 600; color: var(--dark-text); } /* Added .project-card .card-title */
-        .skill-card .card-text { font-size: 0.9rem; }
-
-        /* Project Card Specifics */
-        .project-card .card-text {
-            font-size: 0.88rem; 
-            line-height: 1.5;
-            min-height: 70px; /* Helps align cards if descriptions vary significantly */
-        }
-        .project-links a.btn {
-            font-size: 0.8rem; 
-            padding: 0.3rem 0.8rem;
-        }
-        .card-img-top-placeholder { /* For projects without an image */
-             border-top-left-radius: 11px;
-             border-top-right-radius: 11px;
-             height: 180px;
-             background-color: #e9ecef; /* A light gray */
-             display:flex;
-             align-items:center;
-             justify-content:center;
-        }
-
-
-        /* Badges */
-        .skill-badge {
-            background-color: #eef2ff; /* indigo-50 */
-            color: var(--primary); /* indigo-700 */
-            border: 1px solid #c7d2fe; /* indigo-200 */
-            padding: 0.35em 0.75em;
-            font-size: 0.75rem;
-            font-weight: 500;
-            border-radius: 1rem; /* pill shape */
-            margin: 0.2rem;
-            display: inline-block;
-        }
-
-        /* Progress Bars */
-        .tw-progress {
-            height: 0.65rem;
-            border-radius: 0.5rem;
-            background-color: #e5e7eb;
-            overflow: hidden;
-        }
-        .tw-progress-bar {
-            background: linear-gradient(90deg, var(--primary), var(--chart-color-5));
-            transition: width 1.5s cubic-bezier(0.25, 1, 0.5, 1); /* Smoother transition */
-            height: 100%;
-            border-radius: 0.5rem;
-        }
-
-        /* Forms */
-        .form-control, .form-select {
-            border-radius: 8px;
-            padding: 0.8rem 1rem;
-            border: 1px solid #d1d5db;
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
-        }
-        .form-control:focus, .form-select:focus {
-            border-color: var(--primary);
-            box-shadow: 0 0 0 0.2rem rgba(59, 130, 246, 0.2);
-        }
-        .btn-primary, .btn-outline-primary {
-            transition: background-color 0.3s ease, border-color 0.3s ease, transform 0.2s ease, color 0.3s ease;
-        }
-        .btn-primary {
-            background-color: var(--primary);
-            border-color: var(--primary);
-        }
-        .btn-primary:hover {
-            background-color: #2563eb;
-            border-color: #1d4ed8;
-            transform: translateY(-2px);
-        }
-        .btn-outline-primary {
-            color: var(--primary);
-            border-color: var(--primary);
-        }
-        .btn-outline-primary:hover {
-            background-color: var(--primary);
-            color: white;
-            transform: translateY(-2px);
-        }
-
-
-        /* Footer */
-        footer { background: var(--secondary); color: #d1d5db; padding: 40px 0; font-size: 0.9rem;}
-        footer .social-icons a { color: #9ca3af; font-size: 1.4rem; margin: 0 0.6rem; transition: color 0.3s ease, transform 0.3s ease; }
-        footer .social-icons a:hover { color: var(--primary); transform: translateY(-2px); }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .hero-section { min-height: auto; padding: 5rem 0 3rem 0; text-align: center; }
-            .typewriter h1 { font-size: 2.2rem; }
-            .hero-section h2 { font-size: 1.3rem; }
-            .profile-image-container { width: 50% !important; margin: 2rem auto 0 auto; }
-            .hero-section .d-flex { justify-content: center; flex-direction: column; align-items: center; gap: 0.8rem !important; }
-            .navbar-nav { background-color: white; padding: 1rem; border-radius: 8px; margin-top: 0.5rem; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
-            .section-title h2 { font-size: 2rem; }
-            .chart-container { height: 280px; }
-        }
-
-    </style>
+    
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="80">
 
