--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                 <p class="lead">Click the button below to download my resume and learn more about my qualifications.</p>
             </div>
             <div class="text-center fade-in" style="animation-delay: 0.1s;">
-                 <a href="https://raw.githubusercontent.com/Jeevasurya-Datascientist/jeevasurya.github.io/main/JEEVA%20SURYA%20PALANISAMY%20Resume%20(1).pdf"
-                   download="JeevaSurya_Palanisamy_Resume.pdf"
+                 <a href="https://raw.githubusercontent.com/Jeevasurya-Datascientist/jeevasurya.github.io/main/jeevasurya_resume.pdf"
+                   download="Jeevasurya_Palanisamy_Resume.pdf"
                    class="btn btn-primary btn-lg rounded-pill shadow-sm px-5 py-3 mt-3">
                     <i class="fas fa-download me-2"></i> Download My Resume
                 </a>
