--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <div class="container">
             <div class="row align-items-center gy-4">
                 <div class="col-lg-7 typewriter fade-in">
-                    <h1 class="display-3 mb-3">Hi, I'm Jeeva Surya</h1>
+                    <h1 class="display-3 mb-3">
+                        <span id="typewriter-text"></span><span class="typewriter-caret"></span>
+                    </h1>
                     <h2 class="h2 mb-4 fw-light">Aspiring Data Scientist | Python Developer</h2>
                     <p class="lead mb-5" style="max-width: 550px;">Eager to transform data into insights and build intelligent solutions with Python and Machine Learning.</p>
                     <div class="d-flex gap-3">
